# fields

./: .gitignore  PIPELINE.md  README.md  build_cultures_dataset.py  ftw_oneshot.py  pyproject.toml  run_all_mac.sh  site_geo.py  validate_iou.py
crop_classification/: __init__.py  build_dataset.py  config.py  download_era5.py  download_srtm.py  evaluate.py  experiment_finetune.py  experiment_linear.py  experiment_maml.py  experiment_zeroshot.py  extract_s1_timeseries.py  extract_s2_timeseries.py  predict_ftw_fields.py  run_presto_embed.py  visualize_embeddings.py
crop_classification/data_collection/: build_dataset.py  download_era5.py  download_srtm.py  extract_s1_timeseries.py  extract_s2_timeseries.py  run_presto_embed.py
crop_classification/inference/: adapt_to_region.py  predict_tile.py
crop_classification/training/: build_master_dataset.py  train_finetune.py  train_linear.py  train_maml.py
models/: README.md
tools/: check_regions.py
