[project]
name = "fields"
version = "0.1.0"
description = "Культуры из KML, bbox, подготовка и запуск FTW oneshot в одном окружении uv."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "cdsapi>=0.7.7",
    "earthengine-api>=1.7.22",
    "einops>=0.8.2",
    "ftw-tools",
    "geopandas>=1,<2",
    "h5py>=3.16.0",
    "hurry-filesize>=0.9",
    "matplotlib>=3.10.8",
    "mgrs>=1.5.4",
    "netcdf4>=1.7.4",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2",
    "tqdm>=4.67.3",
    "webdataset>=1.0.2",
    "xarray>=2026.2.0",
]

[tool.uv.sources]
ftw-tools = { path = "ftw-baselines", editable = true }
